tests/spec/format/snapshots/const_declaration_without_value.snap
---
source: tests/spec/format/mod.rs
description: "pub const NoError: Unknown"
---
pub const NoError: Unknown
