tests/spec/format/snapshots/const_public.snap
---
source: tests/spec/format/mod.rs
description: "pub const MAX: int = 100"
---
pub const MAX: int = 100
