tests/spec/format/snapshots/const_simple.snap
---
source: tests/spec/format/mod.rs
description: "input: const MAX_SIZE = 100"
---
const MAX_SIZE = 100
