tests/spec/format/snapshots/const_with_type.snap
---
source: tests/spec/format/mod.rs
description: "const PI: float = 3.14159"
---
const PI: float = 3.14159
