tests/spec/format/snapshots/continue_simple.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { loop { continue } }"
---
fn test() {
  loop {
    continue
  }
}
