tests/spec/format/snapshots/defer_multiple.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn test() {
    defer {
      first();
    };
    defer {
      second();
    };
    work();
  }
---
fn test() {
  defer {
    first()
  }
  defer {
    second()
  }
  work()
}
