tests/spec/format/snapshots/defer_simple.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { defer cleanup(); }"
---
fn test() {
  defer cleanup()
}
