tests/spec/format/snapshots/doc_comment_on_enum_variant.snap
---
source: tests/spec/format/mod.rs
description: |-
  /// Enum doc
  enum Color {
    /// Doc for R
    R,
    /// Doc for G
    G,
    /// Doc for B
    B,
  }
---
/// Enum doc
enum Color {
  /// Doc for R
  R,
  /// Doc for G
  G,
  /// Doc for B
  B,
}
