tests/spec/format/snapshots/docline_multiline.snap
---
source: tests/spec/format/mod.rs
description: |-
  /// First line
  /// Second line
  fn foo() {}
---
/// First line
/// Second line
fn foo() {}
