tests/spec/format/snapshots/docline_on_function.snap
---
source: tests/spec/format/mod.rs
description: |-
  /// This is a docline
  fn foo() {}
---
/// This is a docline
fn foo() {}
