tests/spec/format/snapshots/enum_default_variant_keeps_its_doc_comment.snap
---
source: tests/spec/format/mod.rs
description: |-
  enum Colour {
    /// The zero value.
    #[default]
    Red,
    Green,
  }
---
enum Colour {
  /// The zero value.
  #[default]
  Red,
  Green,
}
